# Built-in meson object

message('meson version:' + meson.version())
message('project name:' + meson.project_name())
message('source root:' + meson.source_root())
message('build root:' + meson.build_root())
message('bankend:' + meson.backend())
message('compiler:' + meson.get_compiler('c').get_id())